--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,14 +9,18 @@ services:
       - "50000:50000"
     volumes:
       - jenkins_home:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - JAVA_OPTS=-Xms256m -Xmx768m
+    networks:
+      - jenkins
     deploy:
       resources:
         limits:
           memory: 1GB
         reservations:
           memory: 800MB
+    restart: unless-stopped
 
   sonarqube:
     image: sonarqube:lts-community
@@ -27,6 +31,8 @@ services:
       SONAR_JDBC_URL: jdbc:postgresql://sonar_db:5432/sonar
       SONAR_JDBC_USERNAME: sonar
       SONAR_JDBC_PASSWORD: sonar
+    networks:
+      - jenkins
     ports:
       - "9000:9000"
     volumes:
@@ -37,6 +43,7 @@ services:
           memory: 800MB
         reservations:
           memory: 500MB
+    restart: unless-stopped
 
   sonar_db:
     image: postgres:latest
@@ -45,10 +52,16 @@ services:
       POSTGRES_USER: sonar
       POSTGRES_PASSWORD: sonar
       POSTGRES_DB: sonar
+    networks:
+      - jenkins
     volumes:
       - sonar_db_data:/var/lib/postgresql
+    restart: unless-stopped
 
 volumes:
   jenkins_home:
   sonarqube_data:
   sonar_db_data:
+
+networks:
+  jenkins:
