--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,8 +12,6 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - JAVA_OPTS=-Xms256m -Xmx768m
-    networks:
-      - jenkins
     deploy:
       resources:
         limits:
@@ -31,8 +29,6 @@ services:
       SONAR_JDBC_URL: jdbc:postgresql://sonar_db:5432/sonar
       SONAR_JDBC_USERNAME: sonar
       SONAR_JDBC_PASSWORD: sonar
-    networks:
-      - jenkins
     ports:
       - "9000:9000"
     volumes:
@@ -52,8 +48,6 @@ services:
       POSTGRES_USER: sonar
       POSTGRES_PASSWORD: sonar
       POSTGRES_DB: sonar
-    networks:
-      - jenkins
     volumes:
       - sonar_db_data:/var/lib/postgresql
     restart: unless-stopped
@@ -64,4 +58,5 @@ volumes:
   sonar_db_data:
 
 networks:
-  jenkins:
+  default:
+    name: jenkins
